# solana-sandwich-detector

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.es.md  README.ko.md  README.md
.github/workflows/: ci.yml
contrib/: vigil-service.example.ts  vigil-types.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/detector/: Cargo.toml
crates/detector-sameblock/: Cargo.toml
crates/detector-sameblock/src/: detector.rs  lib.rs
crates/detector-window/: Cargo.toml
crates/detector-window/src/: filters.rs  lib.rs  naive.rs  pipeline.rs
crates/detector-window/tests/: differential.rs
crates/detector/examples/: stream_detector.rs
crates/detector/src/: authority_hop.rs  detector.rs  error.rs  lib.rs  parser.rs  types.rs
crates/detector/src/dex/: jupiter.rs  meteora.rs  mod.rs  orca.rs  phoenix.rs  pumpfun.rs  raydium.rs  raydium_clmm.rs  raydium_cpmm.rs
crates/detector/src/source/: rpc.rs
crates/detector/tests/: integration.rs
crates/eval/: Cargo.toml
crates/eval/src/: economics.rs  helius.rs  jito.rs  labels.rs  lib.rs  main.rs  metrics.rs  runner.rs  sampler.rs
crates/eval/tests/: adversarial_corpus.rs  golden_corpus.rs
crates/eval/tests/golden/manifests/: slot_285000037.json
crates/pool-state/: Cargo.toml
crates/pool-state/src/: constant_product.rs  counterfactual.rs  diff_test.rs  enrichment.rs  fixed_point.rs  jupiter_v6.rs  lib.rs  lookup.rs  meteora_dlmm.rs  orca_whirlpool.rs  pump_fun.rs  raydium_clmm.rs  raydium_cpmm.rs  raydium_v4.rs  reserves.rs  rpc.rs  spl_mint.rs
crates/pool-state/tests/: k_invariant.rs
crates/swap-events/: Cargo.toml
crates/swap-events/schema/: vigil-v1.json
crates/swap-events/src/: lib.rs  observe.rs  parser.rs  types.rs
crates/swap-events/src/dex/: jupiter.rs  meteora.rs  mod.rs  orca.rs  phoenix.rs  pumpfun.rs  raydium.rs  raydium_clmm.rs  raydium_cpmm.rs
crates/swap-events/src/source/: mod.rs
fixtures/: slot_285000037.json
