[workspace]
members = ["crates/detector", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
sandwich-detector = { path = "crates/detector" }
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
bs58 = "0.5"
async-trait = "0.1"
