[workspace]
members = [
    "crates/swap-events",
    "crates/detector-sameblock",
    "crates/detector-window",
    "crates/detector",
    "crates/cli",
    "crates/eval",
    "crates/pool-state",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
sandwich-detector = { path = "crates/detector" }
sandwich-eval = { path = "crates/eval" }
swap-events = { path = "crates/swap-events" }
detector-sameblock = { path = "crates/detector-sameblock" }
detector-window = { path = "crates/detector-window" }
pool-state = { path = "crates/pool-state" }
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
bs58 = "0.5"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenvy = "0.15"
schemars = { version = "0.8", features = ["preserve_order"] }
proptest = "1"
primitive-types = { version = "0.13", default-features = false }
