[package]
name = "sandwich-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sandwich-detect"
path = "src/main.rs"

[dependencies]
sandwich-detector = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
