[package]
name = "sandwich-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sandwich-detect"
path = "src/main.rs"

[[bin]]
name = "archival-diff"
path = "src/bin/archival_diff.rs"

[[bin]]
name = "balance-diff"
path = "src/bin/balance_diff.rs"

[dependencies]
sandwich-detector = { workspace = true }
sandwich-eval = { workspace = true }
pool-state = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
