[package]
name = "sandwich-detector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Detect sandwich attacks on Solana DEXes"

[dependencies]
swap-events = { path = "../swap-events" }
detector-sameblock = { path = "../detector-sameblock" }
detector-window = { path = "../detector-window" }
bs58 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
solana-transaction-status = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
pool-state = { workspace = true }
