[package]
name = "sandwich-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Evaluation framework for Solana sandwich detectors"

[[bin]]
name = "sandwich-eval"
path = "src/main.rs"

[dependencies]
swap-events = { workspace = true }
detector-sameblock = { workspace = true }
detector-window = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
sandwich-detector = { workspace = true }
