[package]
name = "pool-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AMM pool state reconstruction and counterfactual replay for Solana sandwich detection"

[dependencies]
swap-events = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bs58 = { workspace = true }
async-trait = { workspace = true }
