[package]
name = "swap-events"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solana DEX swap event extraction and block parsing"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bs58 = { workspace = true }
async-trait = { workspace = true }
